package org.caselab.task3;

public enum EFuel {
    GASOLINE,
    DIESEL,
    ELECTRICITY,
    NUCLEAR
}