package org.caselab.task3;

public interface IMechanicable {
    Engine getEngine();
}
