package org.caselab.task3;

public interface IMover {
    public void ignite();
    public void fillWithFuel(EFuel fuel);
    public void turnOff();
}
