package org.caselab.task3;

public interface ITransportable {
    public void move();
}
